start of stylesheet

--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
   <head>
     <title>Broadway Design|Home</title>
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" rel="stylesheet">
   </head>
 
     <!-- Opening -->
 
   <body>
-    <h1>Broadway Design</h1>
-    <p>Home</p>
-    <p>Process</p>
-    <p>Work</p>
-    <p>Team</p>
-    <p>Contact</p>
+    <div class="open">
+      <h1>Broadway Design</h1>
+      <p>Home</p>
+      <p>Process</p>
+      <p>Work</p>
+      <p>Team</p>
+      <p>Contact</p>
+    </div>
+
 
     <!-- Process -->
 
@@ -42,7 +45,7 @@
 
     <!-- Footer -->
 
-    <p>&copy Broadway 2017 Home About Work Team Contact</p>
+    <p id="footer">&copy Broadway 2017 Home About Work Team Contact</p>
 
   </body>
 </html>
