--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Opening -->
 
   <body>
-    <div class="open">
+    <div class="heading">
       <h1>Broadway Design</h1>
       <p>Home</p>
       <p>Process</p>
